content/styles/main.less
@import "reset";

@accent: rgb(190,22,34);

body {
  margin: 0 auto;
  padding: 20px;
  max-width: 800px - 2*20px;
  min-width: 400px;
  font: 11pt/1.6 'Open Sans', Verdana, Arial, sans-serif;
}

a {
  color: @accent;
  &:hover {
    color: lighten(saturate(@accent, 50%), 3%);
  }
}

p, ul, ol {
  + p {
    margin-top: 1em;
  }
}

h1 {
  font-size: 2.5em;
}

h1:before {
  content: "Linked Data Fragments";
  font-weight: 300;
  letter-spacing: -2px;
  color: fade(black, 30%);
  border-right: 1px solid;
  padding-right: 14px;
  margin: 0 10px 0 -2px;
}

h2 {
  font-size: 1.5em;
  margin: .5em 0 .2em -1px;
  color: @accent;

  h1 + & {
    margin-top: .5em;
  }
}

h3 {
  margin: 1em 0 0;
}

dl {
  margin-bottom: .5em
}
dt {
  font-weight: bold;
  margin: .1em 0 -.1em 0;
}
dd {
  margin-left: 20px;
}

main ul {
  list-style: none;

  li {
    padding-left: 17px;
    &:before {
      content: "■ ";
      color: @accent;
      position: absolute;
      font-size: .9em;
      margin: -1px -16px;
    }
  }
}

nav {
  background-color: fade(black, 4%);
  border-radius: 10px 5px 5px 10px;
  margin: 10px 0 30px;

  * {
    display: inline-block;
  }
  a {
    text-decoration: none;
  }
  p {
    font-weight: bold;
    border-radius: 10px 3px 3px 10px;
    padding: 5px 15px 5px 10px;
    background-color: @accent;
    a {
      color: white !important;
    }
  }
  ul {
    padding-left: 8px;
    li {
      padding: 5px 10px;
      border-radius: 5px;
      letter-spacing: .1ex; // correct for bold active links
      &.active {
        font-weight: bold;
        letter-spacing: 0px;
      }
      &:hover {
        background-color: @accent;
        a {
          color: white;
        }
        transition: all 0.2s;
      }
    }
  }
}

footer {
  margin-top: 3em;
  text-align: center;
  font-size: small;
  color: lighten(black, 40%);

  a {
    text-decoration: none;
  }
}

svg {
  font-size: .95em;
  .caption {
    font-style: italic;
    fill: #777;
  }
  a {
    fill: @accent;
  }
  .label {
    font-weight: bold;
  }
  text {
    text-anchor: middle;
    &.accent {
      font-weight: bold;
      fill: @accent;
    }
  }
  .left {
    text-anchor: start;
  }
  .right {
    text-anchor: end;
  }
  line {
    stroke: black;
    &.accent {
      stroke: @accent;
      stroke-width: 2px;
    }
  }
}

body.home {
  main {
    a {
      font-weight: bold;
    }

    svg {
      margin: 1.5em 0 .7em;
    }
  }
}

#billboard {
  text-align: center;
  margin: -1em 0 2em;

  h1 {
    display: none;
  }
  p {
    margin: 0 0 .2em;
    font-size: 1.2em;
    font-weight: bold;
  }

  .slogan {
    line-height: 1.4;
    color: @accent;
    font-size: 2em;

    img {
      display: block;
      margin: 0 auto -1.4ex;
      width: 680px;
    }

    a {
      text-decoration: none;
    }
  }

  em {
    white-space: nowrap;
  }
}

.screenshot {
  img {
    width: 190px;
    float: right;
    border: 1px solid #aaa;
    margin-left: 20px;
  }
}

.publication {
  margin: 0 0 1em;

  .title {
    font-weight: bold;
    display: block;
  }

  .authors {
    display: block;
    font-style: italic;
  }

  > *:not(.title) {
    font-size: .9em;
  }

  .links {
    float: right;

    > li {
      display: inline;
      padding: 0;

      &:before {
        content: ' – ';
        position: static;
        margin: 0;
      }
      &:first-child:before {
        content: '';
      }
    }
  }

  .topic {
    display: block;
  }
}

@media (min-width: 800px) {
  body.home {
    main {
      font-size: 1.2em;
    }
  }
}

@media (max-width: 800px) {
  // Display menu on two lines
  nav {
    p {
      display: block;
      border-radius: 10px 0 0 0;
    }
    &:after {
      display: none;
    }
  }

  // ensure labels don't overlap
  svg {
    &.alternate .label:nth-child(odd) {
      baseline-shift: -1em;
    }
  }

  #billboard {
    .slogan {
      font-size: 1.9em;
      img {
        width: 100%;
        margin-bottom: -0.5em;
      }
    }
  }
}

@media (max-width: 620px) {
  body {
    padding: 5px 10px;
    font-size: 10pt;
  }

  // Make headers shorter
  h1 {
    display: none;
  }

  nav {
    margin: -5px -10px 10px;
    ul {
      padding: 0px;
      font-size: .9em;
      li {
        padding: 5px 6px;
      }
    }
  }

  .screenshot {
    display: none;
  }
}

@media (max-height: 700px) {
  body {
    line-height: 1.4;
  }

  #billboard {
    .slogan {
      font-size: 1.3em;
      img {
        width: 50%;
        margin-bottom: -0.5em;
      }
    }
  }
}

